# blog-backend

./: .env  .env.development  .gitignore  Dockerfile  pyproject.toml
blog_backend/: __init__.py  api.py  app.py  cli.py  config.py  const.py  dependencies.py  loader.py  main.py  models.py  services.py  store.py  utils.py  watcher.py  wather.py
blog_backend/dependencies/: __init__.py  auth.py  blog.py  funcs.py  services.py
blog_backend/middlewares/: __init__.py  cache.py  config.py  watcher.py
blog_backend/routers/: articles.py  blogs.py
blog_backend/watcher/: __init__.py
scripts/: deploy.sh
tests/: __init__.py
